k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laborlens-backend
  namespace: laborlens
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: laborlens-backend
  template:
    metadata:
      labels:
        app: laborlens-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/blueandhack/laborlens-backend:6a7bca2069c3ed64038a69113b919395c2f9dc2d
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: laborlens-backend
  namespace: laborlens
spec:
  selector:
    app: laborlens-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
