k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laborlens-mongodb
  namespace: laborlens
spec:
  selector:
    matchLabels:
      app: laborlens-mongodb
  template:
    metadata:
      labels:
        app: laborlens-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:8
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: laborlens-mongodb
  namespace: laborlens
spec:
  selector:
    app: laborlens-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
